Projeto/Compilador/tests/cases/error/T45.pas
program T45;
var s: string;
begin
  s := 'abc';
  length(s);
end.
